--- a/notebooks/create_10kmx10km_grid.ipynb
+++ b/notebooks/create_10kmx10km_grid.ipynb
@@ -43,18 +43,18 @@
       ],
       "metadata": {
         "id": "Q-A36dk25dR2",
-        "outputId": "124d816d-8591-4b59-e13a-dceb0d149a50",
+        "outputId": "f907e059-773f-4ad7-d342-b6bccacceeb1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -67,12 +67,12 @@
       "metadata": {
         "id": "cp8ApN9Z5fWL"
       },
-      "execution_count": 9,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 128,
+      "execution_count": 3,
       "metadata": {
         "id": "xb1uzjkoOovw"
       },
@@ -89,12 +89,12 @@
       ],
       "metadata": {
         "id": "IrJHR-E5Ix8S",
-        "outputId": "5df9e455-04f4-4e11-b23e-d4a01de398fa",
+        "outputId": "8a320757-d316-47df-9977-0b79a88b4132",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 129,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -114,7 +114,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 129
+          "execution_count": 4
         }
       ]
     },
@@ -125,13 +125,13 @@
       ],
       "metadata": {
         "id": "v0OpcMDeETQl",
-        "outputId": "4d8627fd-9574-4585-995c-b2a78d32613c",
+        "outputId": "c06889b2-0882-4fe8-e808-9a81f6a488e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 447
         }
       },
-      "execution_count": 130,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -141,7 +141,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 130
+          "execution_count": 5
         },
         {
           "output_type": "display_data",
@@ -167,54 +167,86 @@
     {
       "cell_type": "code",
       "source": [
-        "# Project to UTM zone for India (EPSG:32643 for Rajasthan)\n",
-        "blocks_metric = blocks_shp.to_crs(epsg=32643)"
+        "import geopandas as gpd\n",
+        "import numpy as np\n",
+        "from shapely.geometry import Point\n",
+        "\n",
+        "def create_10km_grid(blocks_gdf, grid_size_m=10000):\n",
+        "    \"\"\"\n",
+        "    Create a 10km x 10km point grid over the given blocks GeoDataFrame\n",
+        "    and attach block attributes (NAME, DISTRICT, C_CODE11).\n",
+        "\n",
+        "    Args:\n",
+        "        blocks_gdf (GeoDataFrame): Block polygons in projected CRS (meters)\n",
+        "        grid_size_m (int): Grid spacing in meters\n",
+        "\n",
+        "    Returns:\n",
+        "        GeoDataFrame: Grid points with block attributes\n",
+        "    \"\"\"\n",
+        "    # Get bounds\n",
+        "    minx, miny, maxx, maxy = blocks_gdf.total_bounds\n",
+        "\n",
+        "    # Create grid coordinates\n",
+        "    x_coords = np.arange(minx, maxx + grid_size_m, grid_size_m)\n",
+        "    y_coords = np.arange(miny, maxy + grid_size_m, grid_size_m)\n",
+        "\n",
+        "    # Create points\n",
+        "    points = [Point(x, y) for x in x_coords for y in y_coords]\n",
+        "    grid = gpd.GeoDataFrame(geometry=points, crs=blocks_gdf.crs)\n",
+        "\n",
+        "    # Clip points to blocks union (only keep points inside any block)\n",
+        "    grid_clipped = grid[grid.intersects(blocks_gdf.unary_union)].copy()\n",
+        "\n",
+        "    # Spatial join to attach block attributes\n",
+        "    grid_with_attrs = gpd.sjoin(grid_clipped, blocks_gdf[[\"NAME\", \"DISTRICT\", \"C_CODE11\", \"geometry\"]],\n",
+        "                                predicate=\"within\", how=\"left\")\n",
+        "\n",
+        "    # Drop duplicate geometry column added by sjoin\n",
+        "    grid_with_attrs = grid_with_attrs.drop(columns=[\"index_right\"])\n",
+        "\n",
+        "    return grid_with_attrs"
       ],
       "metadata": {
-        "id": "DdrNVaU5E5m3"
+        "id": "IpnI2fbLlQ2B"
       },
-      "execution_count": 131,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Create 10km x 10km grid\n",
-        "minx, miny, maxx, maxy = blocks_metric.total_bounds\n",
-        "\n",
-        "x_coords = np.arange(minx, maxx + 10000, 10000)\n",
-        "y_coords = np.arange(miny, maxy + 10000, 10000)\n",
-        "\n",
-        "points = [Point(x, y) for x in x_coords for y in y_coords]\n",
-        "grid = gpd.GeoDataFrame(geometry=points, crs=blocks_metric.crs)\n"
+        "# Usage\n",
+        "blocks_metric = blocks_shp.to_crs(epsg=32643)  # Project to metric CRS first\n",
+        "grid_10km = create_10km_grid(blocks_metric)\n",
+        "print(grid_10km.head())\n"
       ],
       "metadata": {
-        "id": "8nwHojXWIJWT"
-      },
-      "execution_count": 133,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Clip against shape file\n",
-        "grid_clipped = grid[grid.intersects(blocks_metric.unary_union)]"
-      ],
-      "metadata": {
-        "id": "4xeLBP2QJN0v",
-        "outputId": "4ecee1d5-8c2b-4869-cd66-095671fb354e",
+        "id": "cKT9uACfFRui",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "91f544ed-daef-4026-96a2-f8cbc71d23ac"
       },
-      "execution_count": 135,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-3495576661.py:1: DeprecationWarning: The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
-            "  grid_clipped = grid[grid.intersects(blocks_metric.unary_union)]\n"
+            "/tmp/ipython-input-3189840657.py:29: DeprecationWarning: The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
+            "  grid_clipped = grid[grid.intersects(blocks_gdf.unary_union)].copy()\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                           geometry       NAME   DISTRICT          C_CODE11\n",
+            "123  POINT (-38900.543 2970335.012)  Jaisalmer  Jaisalmer  0811400574000000\n",
+            "124  POINT (-38900.543 2980335.012)  Jaisalmer  Jaisalmer  0811400574000000\n",
+            "125  POINT (-38900.543 2990335.012)  Jaisalmer  Jaisalmer  0811400574000000\n",
+            "126  POINT (-38900.543 3000335.012)  Jaisalmer  Jaisalmer  0811400574000000\n",
+            "127  POINT (-38900.543 3010335.012)  Jaisalmer  Jaisalmer  0811400574000000\n"
           ]
         }
       ]
@@ -222,24 +254,76 @@
     {
       "cell_type": "code",
       "source": [
-        "# Change crs back to 4326\n",
-        "grid_clipped = grid_clipped.to_crs(epsg=4326)"
+        "grid_10km.groupby(by=[\"DISTRICT\",\"NAME\"]).nunique().sum()"
       ],
       "metadata": {
-        "id": "cKT9uACfFRui"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 146
+        },
+        "id": "P5pNAmJ6llwU",
+        "outputId": "1e5b2069-7dea-4f94-e940-b9575a5f4f9e"
       },
-      "execution_count": 136,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "geometry    3420\n",
+              "C_CODE11     244\n",
+              "dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>geometry</th>\n",
+              "      <td>3420</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>C_CODE11</th>\n",
+              "      <td>244</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "grid_clipped.to_file(\"5_Shapefiles/Rajasthan_10kmx10km_grid.geojson\", driver=\"GeoJSON\")"
+        "grid_10km.to_file(\"5_Shapefiles/Rajasthan_10kmx10km_grid.geojson\", driver=\"GeoJSON\")"
       ],
       "metadata": {
         "id": "HZW1iTHgIFyB"
       },
-      "execution_count": 138,
+      "execution_count": 11,
       "outputs": []
     },
     {
