--- a/notebooks/extract_remote_sensing.ipynb
+++ b/notebooks/extract_remote_sensing.ipynb
@@ -2327,7 +2327,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# LULC"
+        "# lulc_data_data_data_data"
       ]
     },
     {
@@ -2695,6 +2695,30 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# ADD indicators\n",
+        "lulc_data['urbanization_index'] = lulc_data['built'] / (\n",
+        "    lulc_data['built'] + lulc_data['trees'] + lulc_data['grass'] + lulc_data['shrub_and_scrub']\n",
+        ")\n",
+        "\n",
+        "lulc_data['surface_water_fraction'] = (\n",
+        "    lulc_data['water'] + lulc_data['flooded_vegetation']\n",
+        ")\n",
+        "\n",
+        "lulc_data['agriculture_fraction'] = lulc_data['crops']\n",
+        "\n",
+        "lulc_data['vegetation_cover'] = (\n",
+        "    lulc_data['trees'] + lulc_data['grass'] + lulc_data['shrub_and_scrub']\n",
+        ")\n",
+        "\n",
+        "lulc_data['nonhabitat_fraction'] = lulc_data['bare'] + lulc_data['snow_and_ice']\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 69,
       "metadata": {},
       "outputs": [
@@ -2868,6 +2892,13 @@
       "source": [
         "lulc_data_gdf.isna().sum()/len(lulc_data_gdf)*100"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
