--- a/notebooks/impute_remote_sensing.ipynb
+++ b/notebooks/impute_remote_sensing.ipynb
@@ -41,7 +41,7 @@
         "drive.mount('/content/drive')\n",
         "import geopandas as gpd\n",
         "from shapely.geometry import Point\n",
-        "from scipy.spatial.distance import pdist, squareform\n"
+        "from scipy.spatial.distance import pdist, squareform"
       ]
     },
     {
