--- a/notebooks/ncd_preprocessing.ipynb
+++ b/notebooks/ncd_preprocessing.ipynb
@@ -1761,7 +1761,7 @@
       "metadata": {
         "id": "7821284VL5rq"
       },
-      "execution_count": null,
+      "execution_count": 600,
       "outputs": []
     },
     {
@@ -1777,7 +1777,7 @@
       "metadata": {
         "id": "n9oRONrsMJUf"
       },
-      "execution_count": null,
+      "execution_count": 602,
       "outputs": []
     },
     {
@@ -1796,19 +1796,19 @@
       "metadata": {
         "id": "PUlNEN5_thAv"
       },
-      "execution_count": null,
+      "execution_count": 603,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "ncd_joined.drop(columns=['chip_block_id', 'centroid_lat', 'centroid_lng',\n",
+        "ncd_joined.drop(columns=['centroid_lat', 'centroid_lng',\n",
         "       'geometry', 'index_right', 'C_CODE11'], inplace=True)"
       ],
       "metadata": {
         "id": "OTKQoEQnz2Ce"
       },
-      "execution_count": null,
+      "execution_count": 604,
       "outputs": []
     },
     {
@@ -1819,7 +1819,7 @@
       "metadata": {
         "id": "m0X-vP_ExsCK"
       },
-      "execution_count": null,
+      "execution_count": 605,
       "outputs": []
     },
     {
@@ -1833,7 +1833,7 @@
       "metadata": {
         "id": "hdduSEEQvLuD"
       },
-      "execution_count": null,
+      "execution_count": 606,
       "outputs": []
     },
     {
@@ -1845,7 +1845,7 @@
       "metadata": {
         "id": "vPHMfyF81cEq"
       },
-      "execution_count": null,
+      "execution_count": 607,
       "outputs": []
     },
     {
@@ -1860,9 +1860,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pMKWxEgR19i1",
-        "outputId": "278a4b9a-b687-4fd3-e0c7-a688a975a234"
+        "outputId": "0f2b594b-10f4-4377-9012-c7d350dcb980"
       },
-      "execution_count": null,
+      "execution_count": 608,
       "outputs": [
         {
           "output_type": "stream",
@@ -1877,13 +1877,13 @@
     {
       "cell_type": "code",
       "source": [
-        "merged=merged[['NAME', 'DISTRICT', 'C_CODE11','Year_Month','ncd_district_id', 'ncd_taluka_id','ht_diagnosed', 'diab_diagnosed', 'diab_enrolled_all',\n",
+        "merged=merged[['NAME', 'DISTRICT', 'C_CODE11','Year_Month','ncd_district_id', 'ncd_taluka_id','chip_block_id','ht_diagnosed', 'diab_diagnosed', 'diab_enrolled_all',\n",
         "       'ht_enrolled_all', 'ht_proportion', 'diab_proportion']]"
       ],
       "metadata": {
         "id": "oW5STr8h1Bfy"
       },
-      "execution_count": null,
+      "execution_count": 609,
       "outputs": []
     },
     {
@@ -1894,7 +1894,7 @@
       "metadata": {
         "id": "vdjPNM8cLcb5"
       },
-      "execution_count": null,
+      "execution_count": 610,
       "outputs": []
     },
     {
