--- a/notebooks/create_10kmx10km_grid.ipynb
+++ b/notebooks/create_10kmx10km_grid.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/anujavenkatachalam04/chvi_vbd_rj/blob/main/notebooks/create_10kmx10km_grid.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "AxLHl54E5hMF"
       },
       "source": [
@@ -14,11 +24,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "UMIQVWoD5bg5"
+        "id": "UMIQVWoD5bg5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "32a9d063-ec36-4ce4-a343-9cb51ee99d46"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting arcgis@ https://pypi.esri.com/simple/arcgis/ (from -r https://raw.githubusercontent.com/anujavenkatachalam04/chvi_vbd_rj/main/requirements.txt (line 30))\n",
+            "\u001b[33m  WARNING: Retrying (Retry(total=4, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x7addc90625d0>: Failed to establish a new connection: [Errno -2] Name or service not known')': /simple/arcgis/\u001b[0m\u001b[33m\n",
+            "\u001b[0m\u001b[33m  WARNING: Retrying (Retry(total=3, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x7addc9068f50>: Failed to establish a new connection: [Errno -2] Name or service not known')': /simple/arcgis/\u001b[0m\u001b[33m\n",
+            "\u001b[0m\u001b[33m  WARNING: Retrying (Retry(total=2, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x7addc906a480>: Failed to establish a new connection: [Errno -2] Name or service not known')': /simple/arcgis/\u001b[0m\u001b[33m\n",
+            "\u001b[0m\u001b[33m  WARNING: Retrying (Retry(total=1, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x7addc902b560>: Failed to establish a new connection: [Errno -2] Name or service not known')': /simple/arcgis/\u001b[0m\u001b[33m\n",
+            "\u001b[0m\u001b[33m  WARNING: Retrying (Retry(total=0, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x7addc8fe4cb0>: Failed to establish a new connection: [Errno -2] Name or service not known')': /simple/arcgis/\u001b[0m\u001b[33m\n",
+            "\u001b[0m\u001b[31mERROR: Could not install packages due to an OSError: HTTPSConnectionPool(host='pypi.esri.com', port=443): Max retries exceeded with url: /simple/arcgis/ (Caused by NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x7addc8fe7cb0>: Failed to establish a new connection: [Errno -2] Name or service not known'))\n",
+            "\u001b[0m\u001b[31m\n",
+            "\u001b[0m"
+          ]
+        }
+      ],
       "source": [
         "# import dependencies\n",
         "!pip install -r https://raw.githubusercontent.com/anujavenkatachalam04/chvi_vbd_rj/main/requirements.txt"
@@ -253,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -317,7 +347,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "lNNCPcNyn_6J"
       },
@@ -329,7 +359,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -749,7 +779,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "8AJIIlN-PZXP"
+      },
       "outputs": [],
       "source": [
         "grid_10km[\"grid_id\"] = grid_10km[\"grid_id\"] = grid_10km.index + 1"
@@ -757,7 +789,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "HZW1iTHgIFyB"
       },
@@ -785,7 +817,8 @@
         "1cYy5Wf9c_YT",
         "dFFNK9ux6Hk_"
       ],
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
