--- a/notebooks/extract_era5.ipynb
+++ b/notebooks/extract_era5.ipynb
@@ -12,7 +12,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -43,7 +43,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,12 +87,12 @@
       ],
       "metadata": {
         "id": "g5JoHTMxiwek",
-        "outputId": "1e93e5c3-0813-4508-8210-525a37fdf3f2",
+        "outputId": "b54add9a-2ca3-45c6-f149-310bc9534828",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 21,
       "metadata": {
         "id": "6IfTIUpI6m27"
       },
@@ -122,7 +122,7 @@
       "metadata": {
         "id": "DcTB1Q8YV167"
       },
-      "execution_count": 5,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -133,7 +133,7 @@
       "metadata": {
         "id": "JvjmCyXniAu6"
       },
-      "execution_count": 6,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -156,13 +156,13 @@
       ],
       "metadata": {
         "id": "3KfvNjQqnuUQ",
-        "outputId": "81e099ab-814c-45cb-e08d-71b2bf88629b",
+        "outputId": "bc5cb2a1-c9fb-4e6a-8a3a-e9d5f868f47f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
         }
       },
-      "execution_count": 7,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -198,7 +198,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8bebe725-0126-4161-a7a1-67355eb8257a\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-da127bf8-9170-40b9-9963-c8146967335e\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -320,7 +320,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8bebe725-0126-4161-a7a1-67355eb8257a')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-da127bf8-9170-40b9-9963-c8146967335e')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -372,12 +372,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-8bebe725-0126-4161-a7a1-67355eb8257a button.colab-df-convert');\n",
+              "        document.querySelector('#df-da127bf8-9170-40b9-9963-c8146967335e button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-8bebe725-0126-4161-a7a1-67355eb8257a');\n",
+              "        const element = document.querySelector('#df-da127bf8-9170-40b9-9963-c8146967335e');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -397,8 +397,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-ab76805f-fabe-41bf-bce2-d5bf2c763dd0\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ab76805f-fabe-41bf-bce2-d5bf2c763dd0')\"\n",
+              "    <div id=\"df-e7b2ebb5-d143-47c8-9872-11380c67914e\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e7b2ebb5-d143-47c8-9872-11380c67914e')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -517,14 +517,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-ab76805f-fabe-41bf-bce2-d5bf2c763dd0 button');\n",
+              "            document.querySelector('#df-e7b2ebb5-d143-47c8-9872-11380c67914e button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_7d066b0d-f32d-454f-8284-3bbb96e0a836\">\n",
+              "  <div id=\"id_864083aa-bfe4-454c-8279-078c608af788\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -568,7 +568,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_7d066b0d-f32d-454f-8284-3bbb96e0a836 button.colab-df-generate');\n",
+              "        document.querySelector('#id_864083aa-bfe4-454c-8279-078c608af788 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -589,7 +589,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 24
         }
       ]
     },
@@ -604,7 +604,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 25,
       "metadata": {
         "id": "HGhfttkMP9T9"
       },
@@ -678,9 +678,9 @@
     {
       "cell_type": "code",
       "source": [
-        "start_date = \"2020-01-01\"\n",
-        "end_date = \"2025-11-17\"\n",
-        "api_key=\"\"\n",
+        "start_date = \"2015-01-01\"\n",
+        "end_date = \"2019-12-31\"\n",
+        "api_key=\"FrBHTVq25VDS9Lfu\"\n",
         "\n",
         "\n",
         "all_results = []\n",
@@ -700,10 +700,22 @@
         "era5_grid_df = pd.concat(all_results, ignore_index=True)"
       ],
       "metadata": {
-        "id": "CGlVMMdinZ2j"
+        "id": "CGlVMMdinZ2j",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e84bf439-0754-4016-e1ab-7448d537befd"
       },
-      "execution_count": 1,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            " 96%|█████████▌| 2978/3095 [15:59<00:31,  3.68it/s]"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -717,7 +729,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -745,12 +757,45 @@
     {
       "cell_type": "code",
       "source": [
-        "era5_grid_df.to_csv(\"1_Data/Climate/Raw/openmeteo_daily_era5land_1deg_grid_2020-01-01_to_2025-11-17.csv\", index=False)"
+        "old_data=pd.read_csv(\"1_Data/Climate/Raw/openmeteo_daily_era5land_1deg_grid_2020-01-01_to_2025-11-17.csv\")"
+      ],
+      "metadata": {
+        "id": "ptf833zvz5v7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_df=pd.concat([old_data, era5_grid_df])"
+      ],
+      "metadata": {
+        "id": "-c7d_8GT0E9R"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_df.columns"
+      ],
+      "metadata": {
+        "id": "gxafgPuZ0Rd5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_df.to_csv(\"1_Data/Climate/Raw/openmeteo_daily_era5land_1deg_grid_2015-01-01_to_2025-11-17.csv\", index=False)"
       ],
       "metadata": {
         "id": "RhZqvWcvp0O0"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
