--- a/notebooks/extract_era5.ipynb
+++ b/notebooks/extract_era5.ipynb
@@ -87,12 +87,12 @@
       ],
       "metadata": {
         "id": "g5JoHTMxiwek",
-        "outputId": "b54add9a-2ca3-45c6-f149-310bc9534828",
+        "outputId": "8df6c400-9cd2-4d5a-d020-bb5e5a8709c0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 29,
       "metadata": {
         "id": "6IfTIUpI6m27"
       },
@@ -122,7 +122,7 @@
       "metadata": {
         "id": "DcTB1Q8YV167"
       },
-      "execution_count": 22,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -133,7 +133,7 @@
       "metadata": {
         "id": "JvjmCyXniAu6"
       },
-      "execution_count": 23,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -146,7 +146,7 @@
       "metadata": {
         "id": "2BhiRPNBiCvO"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -156,13 +156,13 @@
       ],
       "metadata": {
         "id": "3KfvNjQqnuUQ",
-        "outputId": "bc5cb2a1-c9fb-4e6a-8a3a-e9d5f868f47f",
+        "outputId": "62044d01-7990-43f1-a190-bc27c4d5480f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
         }
       },
-      "execution_count": 24,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -198,7 +198,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-da127bf8-9170-40b9-9963-c8146967335e\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-8aecf52d-c61f-4e44-b4e4-ae7b56905b60\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -320,7 +320,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-da127bf8-9170-40b9-9963-c8146967335e')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8aecf52d-c61f-4e44-b4e4-ae7b56905b60')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -372,12 +372,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-da127bf8-9170-40b9-9963-c8146967335e button.colab-df-convert');\n",
+              "        document.querySelector('#df-8aecf52d-c61f-4e44-b4e4-ae7b56905b60 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-da127bf8-9170-40b9-9963-c8146967335e');\n",
+              "        const element = document.querySelector('#df-8aecf52d-c61f-4e44-b4e4-ae7b56905b60');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -397,8 +397,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-e7b2ebb5-d143-47c8-9872-11380c67914e\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e7b2ebb5-d143-47c8-9872-11380c67914e')\"\n",
+              "    <div id=\"df-4abb4524-0014-46ef-b63f-337a4764dc11\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4abb4524-0014-46ef-b63f-337a4764dc11')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -517,14 +517,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-e7b2ebb5-d143-47c8-9872-11380c67914e button');\n",
+              "            document.querySelector('#df-4abb4524-0014-46ef-b63f-337a4764dc11 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_864083aa-bfe4-454c-8279-078c608af788\">\n",
+              "  <div id=\"id_a43adaed-8b74-471c-80ab-4956204b9f1d\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -568,7 +568,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_864083aa-bfe4-454c-8279-078c608af788 button.colab-df-generate');\n",
+              "        document.querySelector('#id_a43adaed-8b74-471c-80ab-4956204b9f1d button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -589,7 +589,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 33
         }
       ]
     },
@@ -604,7 +604,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 34,
       "metadata": {
         "id": "HGhfttkMP9T9"
       },
@@ -679,8 +679,8 @@
       "cell_type": "code",
       "source": [
         "start_date = \"2015-01-01\"\n",
-        "end_date = \"2019-12-31\"\n",
-        "api_key=\"FrBHTVq25VDS9Lfu\"\n",
+        "end_date = \"2025-11-17\"\n",
+        "api_key=\"\"\n",
         "\n",
         "\n",
         "all_results = []\n",
@@ -704,15 +704,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e84bf439-0754-4016-e1ab-7448d537befd"
+        "outputId": "da03d6d5-ade9-413b-f706-482d1f030270"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 96%|█████████▌| 2978/3095 [15:59<00:31,  3.68it/s]"
+            "100%|██████████| 3095/3095 [00:19<00:00, 160.55it/s]\n"
           ]
         }
       ]
@@ -720,26 +720,27 @@
     {
       "cell_type": "code",
       "source": [
-        "era5_grid_df.date.max()"
+        "era5_grid_df.date.max(), era5_grid_df.date.min()"
       ],
       "metadata": {
         "id": "roTDw6LrrQ-o",
-        "outputId": "b0778bb0-f8ee-4124-ed25-29d73b7f5af0",
+        "outputId": "cbb2b6b2-5d26-47c3-94fe-a02029be979f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Timestamp('2025-11-17 00:00:00+0000', tz='UTC')"
+              "(Timestamp('2019-12-31 00:00:00+0000', tz='UTC'),\n",
+              " Timestamp('2015-01-01 00:00:00+0000', tz='UTC'))"
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 38
         }
       ]
     },
@@ -751,51 +752,32 @@
       "metadata": {
         "id": "2cFu7Xmx1Nkm"
       },
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "old_data=pd.read_csv(\"1_Data/Climate/Raw/openmeteo_daily_era5land_1deg_grid_2020-01-01_to_2025-11-17.csv\")"
-      ],
-      "metadata": {
-        "id": "ptf833zvz5v7"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "new_df=pd.concat([old_data, era5_grid_df])"
-      ],
-      "metadata": {
-        "id": "-c7d_8GT0E9R"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "new_df.columns"
+        "era5_grid_df=era5_grid_df[['date', 'grid_id','NAME', 'DISTRICT',\n",
+        "       'C_CODE11','latitude', 'longitude',  'temperature_2m_mean', 'temperature_2m_max',\n",
+        "       'temperature_2m_min', 'precipitation_sum', 'relative_humidity_2m_mean',\n",
+        "       'wind_speed_10m_mean', 'wind_speed_10m_max', 'diurnal_temperature_range_computed']]"
       ],
       "metadata": {
         "id": "gxafgPuZ0Rd5"
       },
-      "execution_count": null,
+      "execution_count": 49,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "new_df.to_csv(\"1_Data/Climate/Raw/openmeteo_daily_era5land_1deg_grid_2015-01-01_to_2025-11-17.csv\", index=False)"
+        "era5_grid_df.to_csv(\"1_Data/Climate/Raw/openmeteo_daily_era5land_1deg_grid_2015-01-01_to_2025-11-17.csv\", index=False)"
       ],
       "metadata": {
         "id": "RhZqvWcvp0O0"
       },
-      "execution_count": null,
+      "execution_count": 51,
       "outputs": []
     },
     {
